# learnWords

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_OPTIMIZATION.md  DEPLOYMENT.md  Dockerfile  GIT_SETUP.md  OPTIMIZATION_SUMMARY.md  PORT_CONFIG.md  README.md  alembic.ini  deploy.sh  docker-compose.optimized.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  start.sh  test_api.py  test_enhanced.py
.github/workflows/: ci.yml
alembic/: env.py
app/: __init__.py  celery_app.py  cli.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: admin.py  ai_management.py  auth.py  documents.py  export.py  health.py  lesson_plans.py  monitoring.py  websocket.py
app/core/: cache.py  cache_optimized.py  config.py  config_optimized.py  database_optimized.py  enhanced_task_scheduler.py  logging.py  middleware.py  monitoring.py  performance_middleware.py  rate_limit.py  security.py  startup_optimized.py  task_manager.py
app/models/: __init__.py  document.py  lesson_plan.py  user.py
app/schemas/: __init__.py  document.py  lesson_plan.py  user.py
app/services/: __init__.py  ai_service.py  ai_service_optimized.py  export_service.py  prompt_engine.py  storage_service.py
app/tasks/: __init__.py  document_processing.py  lesson_plan_generation.py
frontend/: index.html
frontend/js/: app.js
nginx/: nginx.conf  nginx.dev.conf  nginx.optimized.conf
scripts/: deploy.sh  init-db.sql  init_db.py  manage.sh  monitor.sh
static/: .gitkeep
tests/: __init__.py  conftest.py  factories.py
tests/integration/: test_api_auth.py
tests/unit/: test_models.py
